[package]
name = "a_new_os"
version = "0.1.0"
authors = ["dvedvick@gmail.com"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-new-os.json"

[features]
integration-test = []

[dependencies]
bootloader = "0.3.4"
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"

[dev-dependencies]
array-init = "0.0.3"
speculate = "0.1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
